--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .btn {
+    @apply px-2 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-[1px] text-gray-500 transition-all 
+      hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
+  }
+}
+.inputfield {
+  @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424]
+  text-gray-500 placeholder-gray-500 transition-all focus:text-[#f7ab0a]/40 focus:border-[#f7ab0a]/40 hover:border-[#f7ab0a]/40;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -15,19 +25,12 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body {
+  /* overflow: hidden; */
+  /* overflow-y: scroll; */
 }
